<resources>
    <string name="app_name">polyPod</string>
    <string name="app_bar_close_button_desc">Close</string>
    <string name="app_bar_search_button_desc">Search</string>
    <string name="app_bar_info_button_desc">Info</string>
    <string name="onboarding_button_end">OK</string>
    <string name="onboarding_button_auth">Set up now</string>
    <string name="onboarding_button_do_not_ask">Do not ask again</string>
    <string name="onboarding_slide1_headline">"Hello, may I\nintroduce myself?"</string>
    <string name="onboarding_slide1_sub_headline">I am your\npolyPod.</string>
    <string name="onboarding_slide1_body_text">In the future, I want to ensure that private matters remain private. That won\'t happen overnight of course, but we\'ll get there together, step by step.</string>
    <string name="onboarding_slide2_headline">In step one,\nwe explore</string>
    <string name="onboarding_slide2_sub_headline">the flow of data\ntogether.</string>
    <string name="onboarding_slide2_body_text">To make a difference, we first need to understand exactly what is happening with our data. Let\'s find out together how companies handle your data.</string>
    <string name="onboarding_slide3_headline">A first step,\nmany will follow.</string>
    <string name="onboarding_slide3_sub_headline">So that private matters\nremain private.</string>
    <string name="onboarding_slide3_body_text">Step by step, I\'m offering you more and more ways to protect your privacy. I will of course be in touch as soon as new functionality is ready for you.</string>
    <string name="onboarding_slide4_headline">Security first.</string>
    <string name="onboarding_slide4_sub_headline">Enable security\nbefore we continue?</string>
    <string name="onboarding_slide4_body_text">We would like to ensure any data you put into polyPod is as secure as possible. For this we would like to ask you to enable some way of authentication for future access.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_about_section">Info</string>
    <string name="settings_version">Version</string>
    <string name="settings_legal_section">Legal</string>
    <string name="settings_imprint_title">Imprint</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_terms_of_use_title">Terms of Use</string>
    <string name="settings_licenses_title">Licenses</string>
    <string name="message_url_open_prevented">I have blocked %1$s from opening a URL:\n%2$s</string>
    <string name="message_url_open_requested">%1$s wants to open a URL in your browser:\n\n%2$s\n\nAllow?</string>
    <string name="button_url_open_confirm">Yes</string>
    <string name="button_url_open_reject">No</string>
    <string name="button_update_notification_close">OK</string>
    <string name="button_acknowledge">OK</string>
    <string name="auth_title">Login into polyPod</string>
    <string name="auth_subtitle">Either use device credential or biometrics</string>
    <string name="auth_success">Authentication successful</string>
    <string name="auth_enable_lock_message">We strongly advise to set up an authentication mechanism for increased security</string>
    <string name="auth_enable_lock_yes">Set up lock screen</string>
    <string name="auth_enable_lock_no">Skip</string>
    <string name="auth_enable_lock_do_not_ask">Do not ask again</string>
    <string name="auth_enable_lock_title">No lock screen?</string>
    <string name="feature_error">Unfortunately, \'%1$s\' had an error:\n\n%2$s\n\nI will close it for you.</string>
</resources>
